<resources>
    <!-- app name -->
    <string name="app_name" translatable="false">KwakVoca</string>
    <string name="app_name_upper" translatable="false">KWAKVOCA</string>

    <!-- Sample strings -->
    <string name="sample_word" translatable="false">apple</string>
    <string name="sample_meaning" translatable="false">1. 사과\n2. 바나나\n3. 오렌지</string>
    <string name="sample_new_version" translatable="false">v0.2.3</string>
    <string name="sample_current_version" translatable="false">v0.2.2</string>
    <string name="sample_update_description">콱보카 v0.2.3에서 추가된 기능들이에요.</string>
    <string name="sample_update_improvements">● 앱 버전, 업데이트 확인 기능\n● 업데이트 알림 기능\n●다의어 추가 기능</string>
    <string name="sample_update_date">배포일: 2020.01.29</string>
    <string name="sample_no_text" translatable="false">…</string>

    <!-- Actions -->
    <string name="action_cancel">취소</string>
    <string name="action_delete">삭제</string>
    <string name="action_delete_word">단어 삭제</string>
    <string name="action_done">완료</string>
    <string name="action_ok">확인</string>
    <string name="action_add">추가</string>
    <string name="action_copy">복사</string>
    <string name="action_edit">수정</string>
    <string name="action_help">도움말</string>

    <!-- activity_sign_in -->
    <string name="text_login">로그인</string>
    <string name="error_login">로그인에 실패했어요.</string>

    <!-- activity_main -->
    <string name="text_main_group_name">내 단어장</string>
    <string name="action_main_add_words">단어 추가하기</string>
    <string name="action_main_show_bookmark">북마크 보기</string>
    <string name="action_main_go_settings">설정 화면 가기</string>
    <string name="action_main_restore_word">복원</string>
    <string name="result_main_added_word">단어가 추가되었어요.</string>
    <string name="result_main_edited_word">단어가 수정되었어요.</string>
    <string name="result_main_deleted_word">단어가 삭제되었어요.</string>
    <string name="result_main_restored_word">단어가 복원되었어요.</string>
    <string name="result_main_copied_word">단어가 클립보드에 복사되었어요.</string>
    <string name="error_main_adding_word">단어가 추가되는 중에 문제가 생겼어요.</string>
    <string name="error_main_editing_word">단어가 수정되는 중에 문제가 생겼어요.</string>

    <!-- default_dialog -->
    <string name="dialog_warning_delete_word">단어를 삭제하시겠어요?</string>
    <string name="dialog_text_help_multisense">단어에 뜻을 2개 이상 추가하려면 뜻 칸에 뜻을 입력한 후 키보드의 다음 버튼을 누르세요.</string>
    <string name="dialog_text_help_update">업데이트하기 버튼을 누르고 표시되는 웹사이트(Github)에서 \'Asset\' 버튼을 누르고 apk 파일을 다운로드 후 설치하세요.</string>

    <!-- activity_add_words -->
    <string name="title_add_word">단어 추가</string>
    <string name="title_edit_word">단어 수정</string>
    <string name="hint_add_words_word">단어</string>
    <string name="hint_add_words_meaning">뜻</string>
    <string name="error_type_word">단어를 입력해야 해요.</string>
    <string name="error_type_meaning">단어의 뜻을 입력해야 해요.</string>
    <string name="error_type_word_and_meaning">단어와 단어의 뜻을 입력해야 해요.</string>
    <string name="error_minimum_meaning_field">최소한 하나의 뜻은 입력해야 해요.</string>

    <!-- activity_update -->
    <string name="title_update">업데이트 확인</string>
    <string name="text_update_new_version">최신 버전</string>
    <string name="text_update_current_version">현재 버전</string>
    <string name="action_update">업데이트하기</string>
    <string name="action_see_version_logs">버전 기록 보기</string>
    <string name="text_current_version_description">야호! 현재 콱보카의 최신 버전을 사용하고 있어요!</string>
</resources>
