<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/TitleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_main_group_name" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_add_word"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/action_main_add_words"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/button_add_word" />

        <ImageButton
            android:id="@+id/btn_bookmarks"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/action_main_show_bookmark"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_bookmark_action_bar" />

        <ImageButton
            android:id="@+id/btn_exam"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/action_main_show_bookmark"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_exam_white" />

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:background="@color/colorTransparent"
            android:contentDescription="@string/action_main_go_settings"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/button_settings" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/word_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>