<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".AddWordsActivity">

    <LinearLayout
        style="@style/TitleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_words" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_done"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/action_done"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_check_white" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_rectangle_add_words"
                android:fontFamily="@font/nanum_square_round_extra_bold"
                android:hint="@string/hint_add_words_word"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="11dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorDarkWhite"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rectangle_add_words"
                android:padding="10dp">

                <EditText
                    android:id="@+id/edit_meaning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="1dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/nanum_square_round_extra_bold"
                    android:hint="@string/hint_add_words_meaning"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorDarkWhite"
                    android:textSize="20sp" />

                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:contentDescription="@string/action_add"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/button_add_meaning" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>